@@ -4,16 +4,13 @@ import com.dat3m.dartagnan.encoding.EncodingContext;
 import com.dat3m.dartagnan.verification.Context;
 import com.dat3m.dartagnan.wmm.Relation;
 import com.dat3m.dartagnan.wmm.analysis.RelationAnalysis;
-import com.dat3m.dartagnan.wmm.utils.Tuple;
+import com.dat3m.dartagnan.wmm.utils.EventGraph;
 import org.sosy_lab.java_smt.api.BooleanFormula;
 import org.sosy_lab.java_smt.api.BooleanFormulaManager;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
-
-import static java.util.stream.Collectors.toList;
 
 public class Empty extends Axiom {
 
@@ -29,11 +26,11 @@ public class Empty extends Axiom {
     public Map<Relation, RelationAnalysis.ExtendedDelta> computeInitialKnowledgeClosure(
             Map<Relation, RelationAnalysis.Knowledge> knowledgeMap,
             Context analysisContext) {
-        return Map.of(rel, new RelationAnalysis.ExtendedDelta(knowledgeMap.get(rel).getMaySet(), Set.of()));
+        return Map.of(rel, new RelationAnalysis.ExtendedDelta(knowledgeMap.get(rel).getMaySet(), EventGraph.empty()));
     }
 
     @Override
-    protected Set<Tuple> getEncodeTupleSet(Context analysisContext) {
+    protected EventGraph getEncodeGraph(Context analysisContext) {
         final RelationAnalysis ra = analysisContext.get(RelationAnalysis.class);
         return ra.getKnowledge(rel).getMaySet();
     }
@@ -43,10 +40,9 @@ public class Empty extends Axiom {
     	BooleanFormulaManager bmgr = ctx.getBooleanFormulaManager();
         List<BooleanFormula> enc = new ArrayList<>();
         final EncodingContext.EdgeEncoder edge = ctx.edge(rel);
-        for (Tuple tuple : getEncodeTupleSet(ctx.getAnalysisContext())) {
-            enc.add(edge.encode(tuple));
-        }
-        return negated ? List.of(bmgr.or(enc)) : enc.stream().map(bmgr::not).collect(toList());
+        getEncodeGraph(ctx.getAnalysisContext())
+                .apply((e1, e2) -> enc.add(edge.encode(e1, e2)));
+        return negated ? List.of(bmgr.or(enc)) : enc.stream().map(bmgr::not).toList();
     }
 
     @Override
